objects/UNITY_SC_to_Case_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Service Channel Request fields to case fields mappings. Used as key value pair.</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>This field represents the Service Channel category - PM, Project, Service etc. Used with SubID to have default mappings per category</description>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerId_Subscriber__c</fullName>
        <description>If this field is populated, we will look for mappings based on this specific customer (SubscriberId in Service Channel).</description>
        <label>CustomerId - Subscriber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Field type e.g. BU mapping or Priority mapping. This should just be used for maintenance purpose only</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCField__c</fullName>
        <description>This is the source field to match against. All Service Channel case payloads fill the service channel fields on the case.</description>
        <label>SCField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceValue__c</fullName>
        <description>The Source Value coming in through service channel or other integration for mapping.</description>
        <label>SourceValue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <description>This is the target field to map the value to when the case is created from SC.</description>
        <label>TargetField</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value of the Key (Name) provided</description>
        <label>Value</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>UNITY SC to Case Field Mapping</label>
</CustomObject>